# reversi-zero

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
agent/: BENCHMARK_RESULTS.md  Cargo.toml  test_batching_duplicate.rs
agent/crates/cli/: Cargo.toml
agent/crates/cli/src/: main.rs
agent/crates/core/: Cargo.toml
agent/crates/core/src/: lib.rs
agent/crates/mcts/: Cargo.toml
agent/crates/mcts/src/: backup.rs  batching.rs  config.rs  dirichlet.rs  error.rs  evaluation.rs  expansion.rs  lib.rs  mcts.rs  search_result.rs  selection.rs  tree.rs
agent/crates/mcts/tests/: search_integration.rs
agent/crates/nn/: Cargo.toml
agent/crates/nn/src/: lib.rs
agent/crates/reversi_zero_rs/: Cargo.toml  pyproject.toml  reversi_zero_rs.pyi
agent/crates/reversi_zero_rs/src/: lib.rs
agent/crates/selfplay/: Cargo.toml
agent/crates/selfplay/benches/: selfplay_bench.rs
agent/crates/selfplay/src/: data.rs  game.rs  lib.rs  storage.rs
trainer/: pyproject.toml
trainer/players/: alpha_beta_player.py  mcts_player.py  random_player.py  run_arena_mcts.py
trainer/scripts/: check_value_correctness.py  cuda_available.py  export_model.py  verify_selfplay_data.py
trainer/src/reversi_zero_trainer/: __init__.py  data.py  train_main.py  training.py
trainer/src/reversi_zero_trainer/logging/: __init__.py  base.py  config.py  console.py  helpers.py
trainer/src/reversi_zero_trainer/models/: dummy.py
trainer/tests/: test_logging.py  test_training.py
