[project]
name = "reversi-zero-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neodymium6", email = "104201402+neodymium6@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "setuptools>=80.9.0",
    "reversi-zero-rs",
    "rich>=14.2.0",
    "torch==2.9.0",
    "rust-reversi>=1.4.4",
]

[tool.uv.sources]
reversi-zero-rs = { path = "../agent/crates/reversi_zero_rs" }

[project.scripts]
train = "reversi_zero_trainer.train_main:main"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
"reversi-zero-rs" = [
    "torch==2.9.0",
    "setuptools>=80.9.0",
]
