[package]
name = "reversi_zero_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "reversi_zero_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38", "macros"] }
reversi-mcts = { path = "../mcts" }
reversi-nn = { path = "../nn" }
reversi-selfplay = { path = "../selfplay" }
reversi-core = { path = "../core" }
tch = "0.22.0"
anyhow = "1.0"
rayon = "1.10"
num_cpus = "1.16"

[features]
extension-module = ["pyo3/extension-module"]
